--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,25 @@ h4{
     font-weight: bolder;
     color:  #898AA6;
 }
+@media (max-width:600px){
+  h1{
+    font-family: 'Sacramento', cursive;
+    font-size: 3.425rem;
+    color:  #898AA6;
+    line-height: 1;
+    margin: 50px 0 0 0;
+} header{
+  background-color: #898AA6;
+  color: #B7D3DF;
+  padding: 1.5rem;
+  position: fixed;
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 1rem;
+}
+}
+
 p{
     line-height: 2;
 }
